@@ -85,6 +85,10 @@ Deprecated and removed features, and other changes affecting compatibility:
 
 * On Linux, The LD_LIBRARY_VERSION environment variable has been removed.
 
+* The function getdirentries is now deprecated, applications should use
+  either getdents64, readdir64 or readdir.
+
+
 The following bugs are resolved with this release:
 
   [14932] dynamic-link: dlsym(handle, "foo") and dlsym(RTLD_NEXT, "foo")
